# memkraft

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IDEAS-v0.8.md  IMPROVEMENT_IDEAS.md  LICENSE  MANIFEST.in  MIGRATION.md  README.md  README.md.bak-restructure-v3-2026-05-01  pyproject.toml  setup.py
benchmarks/: search_cache_bench.py  v2.7.0-bench-result.json  v2.7.1-bench-result.json
benchmarks/longmemeval/: V5_REPORT.md  evaluator.py  harness.py  judge_smart.sh  llm_backend.py  llm_judge.py  retry_errors.py  run.py  run_majority_vote.py  run_multi_session_improved.sh  run_pref_only.py  run_smart.sh  run_smoke.sh  run_v2.sh  test_ms_fails.py
benchmarks/longmemeval/results/: REPORT_v102_search_smart.md  V2_ANALYSIS.md
benchmarks/personamem/: compare.py  harness.py  harness_v3.py  harness_validator.py  results_128k_gpt41_final.json  results_c_128k_gpt55_partial220.json  results_day3_128k_minpeter_partial.json  results_full_32k_1777000481.json  results_full_32k_1777000481.md  results_full_32k_1777000486.json  results_full_32k_1777000486.md  results_full_32k_1777007353.json  results_full_32k_1777007353.md  results_full_32k_1777009823.json  results_full_32k_1777009823.md  results_full_32k_1777024134.json  results_full_32k_1777024134.md  results_full_32k_1777607141.json  results_full_32k_1777607141.md  results_full_32k_1777607789.json  results_full_32k_1777607789.md  results_full_32k_1777611540.json  results_full_32k_1777611540.md  results_full_32k_1777611605.json  results_full_32k_1777611605.md  results_v3_32k_1776990573.json  results_validator_128k_1777075014.json  results_validator_128k_1777083719.json  results_validator_32k_1777005834.json  results_validator_32k_1777005944.json  results_validator_32k_1777006043.json  results_validator_32k_1777073423.json  results_validator_32k_1777073722.json  results_validator_32k_1777122044.json  results_validator_32k_1777122159.json  results_validator_32k_1777123509.json  results_validator_32k_1777124873.json  results_validator_32k_1777124885.json  run_full.py
benchmarks/personamem/checkpoints/: 128k_1777300217.json  32k_1776992423.json  32k_1777003082.json  32k_1777003472.json  32k_1777003836.json  32k_1777606900.json  32k_1777607207.json  32k_1777611302.json  32k_1777611400.json
docs/: REASONING_BANK_DESIGN.md  V21_BENCHMARK_DIVERSIFICATION.md  V21_CORE_REFACTOR_PLAN.md  V21_MULTIAGENT_V2_SPEC.md  V22_BENCHMARK_IMPROVEMENT_IDEAS.md  V22_EXTERNAL_RESEARCH_DEEP_DIVE.md  mcp-setup.md  v0.9-incident-layer.md
examples/: README.md  minimal_rag.py  openai_function_calling.py
examples/claude_code/: AGENTS.md  example_session.md
scripts/: generate-banner.py
src/memcraft/: __init__.py  cli.py  core.py  stopwords.json
src/memcraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/memkraft/: __init__.py  agents_hint.py  alias.py  bitemporal.py  cache.py  chunking.py  cli.py  confidence.py  consolidation.py  context_compress.py  convergence.py  core.py  decay.py  decision_store.py  doctor.py  embedding.py  graph.py  hierarchical.py  incident.py  lifecycle.py  links.py  mcp.py  mcp_admin.py  multi_pass.py  multimodal.py  personamem.py  preference.py  preference_graph_sync.py  prompt_evidence.py  prompt_tune.py  rca.py  reasoning_bank.py  rerank.py  routing.py  rrf.py  runbook.py  search.py  selfupdate.py  stats.py  temporal_chain.py  (+2 more)
src/memkraft/prompts/: __init__.py
tests/: __init__.py  test_bm25.py  test_causal_graph.py  test_confidence.py  test_consolidation.py  test_context_boost.py  test_counting_question.py  test_embedding.py  test_graph_mixin.py  test_hierarchical.py  test_knowledge_update.py  test_korean_graph.py  test_memkraft.py  test_multi_pass.py  test_multimodal.py  test_new_260_features.py  test_preference_novelty.py  test_preference_v272.py  test_question_routing.py  test_reasoning_bank.py  test_rrf.py  test_search_cache.py  test_temporal_chain.py  test_v020_features.py  test_v030_features.py  test_v040_debug_hypothesis.py  test_v050_snapshots.py  test_v054_context.py  test_v070_multiagent.py  test_v080_bitemporal.py  test_v080_decay.py  test_v080_links.py  test_v080_tiers.py  test_v081_agents_hint.py  test_v081_doctor.py  test_v081_init.py  test_v081_mcp.py  test_v081_watch.py  test_v082_doctor_check_updates.py  test_v082_selfupdate.py  (+17 more)
(+15 files in other folders)
