[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memcraft"
version = "0.1.0"
description = "The compound knowledge system for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Seojun Kim", email = "simonkim.nft@gmail.com"},
]
keywords = ["ai", "agents", "memory", "knowledge-graph", "compound"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
memcraft = "memcraft.cli:main"

[project.urls]
Homepage = "https://github.com/seojoonkim/memcraft"
Repository = "https://github.com/seojoonkim/memcraft"

[tool.setuptools.packages.find]
where = ["src"]
