[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memkraft"
version = "0.8.1"
description = "The compound knowledge system for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Seojun Kim", email = "simonkim.nft@gmail.com"},
]
keywords = ["ai", "agents", "memory", "knowledge-graph", "compound", "cli", "pipx", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Topic :: Utilities",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
watch = ["watchdog>=3.0"]
all = ["mcp>=1.0", "watchdog>=3.0"]

[project.scripts]
memkraft = "memkraft.cli:main"

[project.urls]
Homepage = "https://github.com/seojoonkim/memkraft"
Repository = "https://github.com/seojoonkim/memkraft"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
memkraft = [
    "templates/*.md",
    "prompts/templates/*.md",
    "stopwords.json",
]
